--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_core: ^1.10.0
   fluttertoast: ^8.0.8
   font_awesome_flutter: ^9.2.0
+  get: ^4.6.1
+  flutter_launcher_icons: ^0.9.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
